# cachekit-core

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs  cbindgen.toml  deny.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: attestation-check.yml  ci.yml  codeql.yml  release.yml  security.yml
benches/: hot_path.rs
examples/: bench_throughput.rs
fuzz/: Cargo.toml  Makefile  README.md
fuzz/fuzz_targets/: byte_storage_checksum_collision.rs  byte_storage_compress.rs  byte_storage_corrupted_envelope.rs  byte_storage_decompress.rs  byte_storage_empty_data.rs  byte_storage_format_injection.rs  byte_storage_integer_overflow.rs  compression_bomb.rs  encryption_aad_injection.rs  encryption_key_derivation.rs  encryption_large_payload.rs  encryption_nonce_reuse.rs  encryption_roundtrip.rs  encryption_truncated_ciphertext.rs  integration_layered_security.rs  key_derivation.rs
fuzz/scripts/: generate_corpus.sh
scripts/: install-hooks.sh
src/: byte_storage.rs  checksum.rs  lib.rs  metrics.rs
src/encryption/: core.rs  key_derivation.rs  key_rotation.rs  mod.rs
src/ffi/: byte_storage.rs  encryption.rs  error.rs  handles.rs  mod.rs
supply-chain/: audits.toml  config.toml
tests/: byte_storage_tests.rs  compatibility_test.rs  concurrent_encryption_stress.rs  concurrent_nonce_stress.rs  encryption_tests.rs  large_payload_tests.rs  property_tests.rs  wasm32_compat_tests.rs  wire_format_vectors.rs
tests/common/: fixtures.rs  mod.rs
tests/compatibility/: test_vector.json
tests/cross_language/: Makefile  test_c  test_c.c
tests/vectors/: wire-format.json
